update Api Docs
